Fix a few color contrast things (.btn--primary and .nav__title)

--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -89,7 +89,7 @@
 
       &.current,
       &.current.disabled {
-        color: #fff;
+        color: $background-color; /* #fff; */
         background: $primary-color;
       }
 
