--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -195,11 +195,15 @@ body {
     .page__title,
     .page__meta,
     .page__lead,
-    .btn {
+    /* .btn */{
       color: #fff;
       text-shadow: 1px 1px 4px rgba(#000, 0.5);
     }
-
+    
+    .btn {
+        color: $background-color;
+    }
+    
     .page__lead {
       max-width: $medium;
     }
